--- a/library-ajs/package.json
+++ b/library-ajs/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "repository": {
     "type": "git",
-    "url": "https://github.com/danroman-github/ajs-homeworks/library-ajs/"
+    "url": "git+https://github.com/danroman-github/ajs-homeworks/library-ajs/"
   },
   "license": "ISC",
   "author": "",
   "type": "commonjs",
   "main": "index.js",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
+    "registry": "https://registry.npmjs.org/"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
